crates/vvv/tests/corpus/snapshots/rust-moves__move-selection-conditional__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 1
--- stdout ---
--- stderr ---
✗ selected declaration cannot be moved: several declarations share this module and name
